--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint:js": "eslint . --fix --ignore-path .gitignore",
-    "lint:css": "stylelint '**/*.css' --fix"  ,  
+    "lint:css": "stylelint '**/*.css' --fix",
     "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@mdi/font": "7.0.96",
+    "@vueuse/core": "^10.9.0",
+    "highlight.js": "^11.9.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.23",
-    "roboto-fontface": "*",
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
@@ -21,18 +25,19 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.15.0",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "husky": "^8.0.0",
     "stylelint": "^16.3.1",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.2.0",
-    "husky": "^8.0.0"
+    "vue-tsc": "^1.2.0"
   }
 }
