--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
     "resolveJsonModule": true,
@@ -16,8 +16,17 @@
     "paths": {
       "@/*": [
        "src/*"
-      ]
-     }
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@relations/*": [
+        "src/components/relations/*"
+      ],
+      "@composables/*": [
+        "src/composables/*"
+      ],
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }],
