--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,8 +2,22 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@/*": [
+       "./src/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@relations/*": [
+        "./src/components/relations/*"
+      ],
+      "@composables/*": [
+        "src/composables/*"
+      ],
+    }
   },
   "include": ["vite.config.ts"]
 }
