Add belong to many

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.23",
+    "pluralize": "^8.0.0",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
@@ -27,6 +28,7 @@
     "@babel/types": "^7.21.4",
     "@types/lodash": "^4.17.0",
     "@types/node": "^18.15.0",
+    "@types/pluralize": "^0.0.33",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
