--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,7 +15,7 @@
         "./src/components/relations/*"
       ],
       "@composables/*": [
-        "src/composables/*"
+        "./src/composables/*"
       ],
     }
   },
