--- a/.github/workflows/nodejs_vue_build.yml
+++ b/.github/workflows/nodejs_vue_build.yml
@@ -23,14 +23,19 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Get version from package.json
+        id: package_version
+        run: echo "::set-output name=version::$(jq -r .version package.json)"
+        shell: bash
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         with:
-          tag_name: ${{ github.ref_name }}  # Correctly formatted tag name
-          release_name: Release ${{ github.ref_name }}
+          tag_name: v${{ steps.package_version.outputs.version }}
+          release_name: Release v${{ steps.package_version.outputs.version }}
           draft: false
           prerelease: false
 
