--- a/.github/workflows/nodejs_vue_build.yml
+++ b/.github/workflows/nodejs_vue_build.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Archive build output
+        run: zip -r build.zip dist/
+
       - name: Get version from package.json
         id: package_version
         run: echo "::set-output name=version::$(jq -r .version package.json)"
